# micrograd

./: BENCHMARKS.md  LICENSE  README.md  benchmark.py  conftest.py  pyproject.toml  reference.ipynb  requirements.txt
examples/: learning.ipynb  mechanism.ipynb
micrograd/: __init__.py  classify.py  cli.py  engine.py  frameworks.py  learn.py  nn.py  viz.py
notes/: lecture-1-micrograd.md
tests/: test_engine.py  test_frameworks.py
